@@ -1,4 +1,8 @@
-2008-08-21 fabian
+2008-08-27	fabian
+
+	* Incorporated two patches provided by Akinori MUSHA (knu). They fixed two double-width character issues.
+	
+2008-08-21	fabian
 
 	* Fixed a bug that causes loss of preferences when upgrade.
 	
